--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "start": "next start -p ${PORT:=3000}"
   },
   "dependencies": {
+    "axios": "^0.27.2",
+    "mongoose": "^6.4.7",
     "next": "12.2.2",
     "next-i18next": "11.2.2",
     "prop-types": "15.8.1",
