--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "next-i18next": "11.2.2",
     "prop-types": "15.8.1",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "swr": "^1.3.0"
   }
 }
