--- a/package.json
+++ b/package.json
@@ -1,12 +1,9 @@
 {
-  "name": "v12",
-  "version": "1.0.0",
-  "main": "index.js",
-  "license": "MIT",
+  "private": true,
   "scripts": {
     "dev": "next",
     "build": "next build",
-    "start": "next start -p ${PORT:=3000}"
+    "start": "next start"
   },
   "dependencies": {
     "axios": "^0.27.2",
@@ -17,5 +14,11 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "swr": "^1.3.0"
+  },
+  "devDependencies": {
+    "@types/node": "^18.0.0",
+    "@types/react": "^18.0.14",
+    "@types/react-dom": "^18.0.5",
+    "typescript": "^4.7.4"
   }
 }
